--- a/dolphin-emu/.config/dolphin-emu/Dolphin.ini
+++ b/dolphin-emu/.config/dolphin-emu/Dolphin.ini
@@ -14,10 +14,10 @@ WiiSDCardFilesize = 0x0000000040000000
 [NetPlay]
 TraversalChoice = direct
 [General]
-ISOPath0 = /home/rstudley/Games/retro/Nintendo Wii
-ISOPaths = 2
+ISOPath0 = /home/rstudley/Games/Nintendo - Wii
+ISOPaths = 1
 WirelessMac = 00:17:ab:4f:c5:ca
-ISOPath1 = /home/rstudley/Games/Wii
-WiiSDCardSyncFolder = /home/rstudley/Games/Wii/SD
+ISOPath1 = 
+WiiSDCardSyncFolder = /home/rstudley/Games/Nintendo - Wii/SD
 [DSP]
 DSPThread = True
