--- a/qt/.config/qt5ct/qt5ct.conf
+++ b/qt/.config/qt5ct/qt5ct.conf
@@ -1,9 +1,9 @@
 [Appearance]
 color_scheme_path=/home/rstudley/.config/qt5ct/colors/catppuccin-macchiato-lavender.conf
 custom_palette=true
-icon_theme=Tela-purple-dark
+icon_theme=Tela-circle-purple-dark
 standard_dialogs=default
-style=Darkly
+style=Breeze
 
 [Fonts]
 fixed="FiraCode Nerd Font,12,-1,5,50,0,0,0,0,0"
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xe4\0\0\x3\xff\0\0\0\0\0\0\0\0\0\0\x3\xf2\0\0\x3#\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xe4\0\0\x3\xff)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xb7\0\0\x3\xff\0\0\0\0\0\0\0\0\0\0\x3\xb7\0\0\x3\xff\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xb7\0\0\x3\xff)
 
 [Troubleshooting]
 force_raster_widgets=1
