--- a/dolphin-emu/.config/dolphin-emu/WiimoteNew.ini
+++ b/dolphin-emu/.config/dolphin-emu/WiimoteNew.ini
@@ -1,5 +1,5 @@
 [Wiimote1]
-Device = SDL/0/Nintendo Switch Pro Controller
+Device = SDL/0/Nintendo Switch Joy-Con (L/R)
 Buttons/A = `Button E`
 Buttons/B = `Button S`
 Buttons/1 = `Button N`
@@ -23,27 +23,27 @@ IRPassthrough/Object 4 X = `IR Object 4 X`
 IRPassthrough/Object 4 Y = `IR Object 4 Y`
 IRPassthrough/Object 4 Size = `IR Object 4 Size`
 Extension = Nunchuk
-Nunchuk/Buttons/C = `Shoulder L`
-Nunchuk/Buttons/Z = `Trigger L`
+Nunchuk/Buttons/C = `Shoulder R`
+Nunchuk/Buttons/Z = `Trigger R`
 Nunchuk/Stick/Up = `Left Y+`
 Nunchuk/Stick/Down = `Left Y-`
 Nunchuk/Stick/Left = `Left X-`
 Nunchuk/Stick/Right = `Left X+`
-Nunchuk/Stick/Calibration = 100.00 101.96 108.24 111.68 111.58 111.71 108.24 101.96 100.00 101.96 108.24 110.91 110.68 110.44 108.20 101.96 99.81 101.77 108.04 109.53 109.57 109.56 108.24 101.96 100.00 101.96 108.24 110.43 110.52 110.93 108.24 101.96
+Nunchuk/Stick/Calibration = 81.39 83.28 88.20 98.09 99.53 98.73 95.86 96.05 98.08 99.52 103.97 113.05 118.60 120.27 108.24 101.96 100.00 101.96 107.53 107.25 105.47 103.67 100.82 100.54 99.08 101.02 98.39 94.27 91.45 87.12 83.34 81.72
 Source = 1
-IMUAccelerometer/Up = `Accel Up`
-IMUAccelerometer/Down = `Accel Down`
-IMUAccelerometer/Left = `Accel Left`
-IMUAccelerometer/Right = `Accel Right`
-IMUAccelerometer/Forward = `Accel Forward`
-IMUAccelerometer/Backward = `Accel Backward`
-IMUGyroscope/Pitch Up = `Gyro Pitch Up`
-IMUGyroscope/Pitch Down = `Gyro Pitch Down`
-IMUGyroscope/Roll Left = `Gyro Roll Left`
-IMUGyroscope/Roll Right = `Gyro Roll Right`
-IMUGyroscope/Yaw Left = `Gyro Yaw Left`
-IMUGyroscope/Yaw Right = `Gyro Yaw Right`
-IMUIR/Recenter = `Shoulder R`
+IMUAccelerometer/Up = `DSUClient/0/Joycond Cemuhook:Accel Up`
+IMUAccelerometer/Down = `DSUClient/0/Joycond Cemuhook:Accel Down`
+IMUAccelerometer/Left = `DSUClient/0/Joycond Cemuhook:Accel Left`
+IMUAccelerometer/Right = `DSUClient/0/Joycond Cemuhook:Accel Right`
+IMUAccelerometer/Forward = `DSUClient/0/Joycond Cemuhook:Accel Forward`
+IMUAccelerometer/Backward = `DSUClient/0/Joycond Cemuhook:Accel Backward`
+IMUGyroscope/Pitch Up = `DSUClient/0/Joycond Cemuhook:Gyro Pitch Up`
+IMUGyroscope/Pitch Down = `DSUClient/0/Joycond Cemuhook:Gyro Pitch Down`
+IMUGyroscope/Roll Left = `DSUClient/0/Joycond Cemuhook:Gyro Roll Left`
+IMUGyroscope/Roll Right = `DSUClient/0/Joycond Cemuhook:Gyro Roll Right`
+IMUGyroscope/Yaw Left = `DSUClient/0/Joycond Cemuhook:Gyro Yaw Left`
+IMUGyroscope/Yaw Right = `DSUClient/0/Joycond Cemuhook:Gyro Yaw Right`
+IMUIR/Recenter = `Shoulder L`
 IMUGyroscope/Calibration Period = 0.
 Classic/Buttons/A = `Classic A`
 Classic/Buttons/B = `Classic B`
@@ -75,8 +75,13 @@ Classic/D-Pad/Right = `Classic Right`
 Rumble/Motor = `Motor`
 Options/Battery = 100.
 D-Pad/Right = `Pad E`
-Extension/Attach MotionPlus = False
 IMUGyroscope/Dead Zone = 0.
+Nunchuk/IMUAccelerometer/Up = `DSUClient/1/Joycond Cemuhook:Accel Up`
+Nunchuk/IMUAccelerometer/Down = `DSUClient/1/Joycond Cemuhook:Accel Down`
+Nunchuk/IMUAccelerometer/Left = `DSUClient/1/Joycond Cemuhook:Accel Left`
+Nunchuk/IMUAccelerometer/Right = `DSUClient/1/Joycond Cemuhook:Accel Right`
+Nunchuk/IMUAccelerometer/Forward = `DSUClient/1/Joycond Cemuhook:Accel Forward`
+Nunchuk/IMUAccelerometer/Backward = `DSUClient/1/Joycond Cemuhook:Accel Backward`
 [Wiimote2]
 Device = XInput2/0/Virtual core pointer
 Source = 0
