--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
-gtk-button-images=true
+gtk-button-images=1
 gtk-cursor-blink=true
 gtk-cursor-blink-time=1000
 gtk-cursor-theme-name=breeze_cursors
@@ -11,15 +11,14 @@ gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=0
 gtk-font-name=Noto Sans,  10
 gtk-icon-theme-name=Tela-circle-purple-dark
-gtk-menu-images=true
-gtk-modules=canberra-gtk-module:colorreload-gtk-module:window-decorations-gtk-module
+gtk-menu-images=1
 gtk-primary-button-warps-slider=true
 gtk-sound-theme-name=ocean
-gtk-theme-name=Breeze
+gtk-theme-name=Breeze-Dark
 gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
-gtk-toolbar-style=3
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-xft-antialias=1
 gtk-xft-dpi=98304
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
-gtk-xft-rgba=rgb
+gtk-xft-rgba=none
