--- a/waybar/.config/waybar/config-hyprland.jsonc
+++ b/waybar/.config/waybar/config-hyprland.jsonc
@@ -75,7 +75,7 @@
         "format": "{icon}  {volume}%",
         "tooltip": false,
         "format-muted": " Muted",
-        "on-click": "pavmixer -t",
+        "on-click": "pamixer --toggle-mute",
 	"on-click-right": "pavucontrol",
         "on-scroll-up": "pamixer -i 5",
         "on-scroll-down": "pamixer -d 5",
