--- a/waybar/.config/waybar/config-niri.jsonc
+++ b/waybar/.config/waybar/config-niri.jsonc
@@ -81,10 +81,10 @@
         "format": "{icon}   {volume}%",
         "tooltip": false,
         "format-muted": " Muted",
-        "on-click": "pavucontrol",
-	"on-click-right": "pavucontrol",
-        "on-scroll-up": "pamixer -i 5",
-        "on-scroll-down": "pamixer -d 5",
+        "on-click": "pamixer --toggle-mute",
+	"on-click-right": "pavucontrol-qt",
+        "on-scroll-up": "pamixer -i 1",
+        "on-scroll-down": "pamixer -d 1",
         "scroll-step": 5,
         "format-icons": {
             "headphone": "",
