--- a/dolphin-emu/.config/dolphin-emu/Profiles/Wiimote/Joycons.ini
+++ b/dolphin-emu/.config/dolphin-emu/Profiles/Wiimote/Joycons.ini
@@ -24,20 +24,20 @@ IRPassthrough/Object 3 Size = `IR Object 3 Size`
 IRPassthrough/Object 4 X = `IR Object 4 X`
 IRPassthrough/Object 4 Y = `IR Object 4 Y`
 IRPassthrough/Object 4 Size = `IR Object 4 Size`
-IMUAccelerometer/Up = `DSUClient/0/Joycond Cemuhook:Accel Up`
-IMUAccelerometer/Down = `DSUClient/0/Joycond Cemuhook:Accel Down`
-IMUAccelerometer/Left = `DSUClient/0/Joycond Cemuhook:Accel Left`
-IMUAccelerometer/Right = `DSUClient/0/Joycond Cemuhook:Accel Right`
-IMUAccelerometer/Forward = `DSUClient/0/Joycond Cemuhook:Accel Forward`
-IMUAccelerometer/Backward = `DSUClient/0/Joycond Cemuhook:Accel Backward`
+IMUAccelerometer/Up = `evdev/0/Joy-Con (R) (IMU):Accel Z+`
+IMUAccelerometer/Down = `evdev/0/Joy-Con (R) (IMU):Accel Z-`
+IMUAccelerometer/Left = `evdev/0/Joy-Con (R) (IMU):Accel Y+`
+IMUAccelerometer/Right = `evdev/0/Joy-Con (R) (IMU):Accel Y-`
+IMUAccelerometer/Forward = `evdev/0/Joy-Con (R) (IMU):Accel X+`
+IMUAccelerometer/Backward = `evdev/0/Joy-Con (R) (IMU):Accel X-`
 IMUGyroscope/Dead Zone = 0.
 IMUGyroscope/Calibration Period = 0.
-IMUGyroscope/Pitch Up = `DSUClient/0/Joycond Cemuhook:Gyro Pitch Up`
-IMUGyroscope/Pitch Down = `DSUClient/0/Joycond Cemuhook:Gyro Pitch Down`
-IMUGyroscope/Roll Left = `DSUClient/0/Joycond Cemuhook:Gyro Roll Left`
-IMUGyroscope/Roll Right = `DSUClient/0/Joycond Cemuhook:Gyro Roll Right`
-IMUGyroscope/Yaw Left = `DSUClient/0/Joycond Cemuhook:Gyro Yaw Left`
-IMUGyroscope/Yaw Right = `DSUClient/0/Joycond Cemuhook:Gyro Yaw Right`
+IMUGyroscope/Pitch Up = `evdev/0/Joy-Con (R) (IMU):Gyro Y-`
+IMUGyroscope/Pitch Down = `evdev/0/Joy-Con (R) (IMU):Gyro Y+`
+IMUGyroscope/Roll Left = `evdev/0/Joy-Con (R) (IMU):Gyro X-`
+IMUGyroscope/Roll Right = `evdev/0/Joy-Con (R) (IMU):Gyro X+`
+IMUGyroscope/Yaw Left = `evdev/0/Joy-Con (R) (IMU):Gyro Z-`
+IMUGyroscope/Yaw Right = `evdev/0/Joy-Con (R) (IMU):Gyro Z+`
 Extension = Nunchuk
 Nunchuk/Buttons/C = `Shoulder R`
 Nunchuk/Buttons/Z = `Trigger R`
@@ -80,4 +80,5 @@ Classic/D-Pad/Down = `Classic Down`
 Classic/D-Pad/Left = `Classic Left`
 Classic/D-Pad/Right = `Classic Right`
 Rumble/Motor = `Motor`
+Rumble/Motor/Range = 50.
 Options/Battery = 100.
