--- a/dolphin-emu/.config/dolphin-emu/WiimoteNew.ini
+++ b/dolphin-emu/.config/dolphin-emu/WiimoteNew.ini
@@ -31,18 +31,18 @@ Nunchuk/Stick/Left = `Left X-`
 Nunchuk/Stick/Right = `Left X+`
 Nunchuk/Stick/Calibration = 81.39 83.28 88.20 98.09 99.53 98.73 95.86 96.05 98.08 99.52 103.97 113.05 118.60 120.27 108.24 101.96 100.00 101.96 107.53 107.25 105.47 103.67 100.82 100.54 99.08 101.02 98.39 94.27 91.45 87.12 83.34 81.72
 Source = 1
-IMUAccelerometer/Up = `DSUClient/0/Joycond Cemuhook:Accel Up`
-IMUAccelerometer/Down = `DSUClient/0/Joycond Cemuhook:Accel Down`
-IMUAccelerometer/Left = `DSUClient/0/Joycond Cemuhook:Accel Left`
-IMUAccelerometer/Right = `DSUClient/0/Joycond Cemuhook:Accel Right`
-IMUAccelerometer/Forward = `DSUClient/0/Joycond Cemuhook:Accel Forward`
-IMUAccelerometer/Backward = `DSUClient/0/Joycond Cemuhook:Accel Backward`
-IMUGyroscope/Pitch Up = `DSUClient/0/Joycond Cemuhook:Gyro Pitch Up`
-IMUGyroscope/Pitch Down = `DSUClient/0/Joycond Cemuhook:Gyro Pitch Down`
-IMUGyroscope/Roll Left = `DSUClient/0/Joycond Cemuhook:Gyro Roll Left`
-IMUGyroscope/Roll Right = `DSUClient/0/Joycond Cemuhook:Gyro Roll Right`
-IMUGyroscope/Yaw Left = `DSUClient/0/Joycond Cemuhook:Gyro Yaw Left`
-IMUGyroscope/Yaw Right = `DSUClient/0/Joycond Cemuhook:Gyro Yaw Right`
+IMUAccelerometer/Up = `evdev/0/Joy-Con (R) (IMU):Accel Z+`
+IMUAccelerometer/Down = `evdev/0/Joy-Con (R) (IMU):Accel Z-`
+IMUAccelerometer/Left = `evdev/0/Joy-Con (R) (IMU):Accel Y+`
+IMUAccelerometer/Right = `evdev/0/Joy-Con (R) (IMU):Accel Y-`
+IMUAccelerometer/Forward = `evdev/0/Joy-Con (R) (IMU):Accel X+`
+IMUAccelerometer/Backward = `evdev/0/Joy-Con (R) (IMU):Accel X-`
+IMUGyroscope/Pitch Up = `evdev/0/Joy-Con (R) (IMU):Gyro Y-`
+IMUGyroscope/Pitch Down = `evdev/0/Joy-Con (R) (IMU):Gyro Y+`
+IMUGyroscope/Roll Left = `evdev/0/Joy-Con (R) (IMU):Gyro X-`
+IMUGyroscope/Roll Right = `evdev/0/Joy-Con (R) (IMU):Gyro X+`
+IMUGyroscope/Yaw Left = `evdev/0/Joy-Con (R) (IMU):Gyro Z-`
+IMUGyroscope/Yaw Right = `evdev/0/Joy-Con (R) (IMU):Gyro Z+`
 IMUIR/Recenter = `Shoulder L`
 IMUGyroscope/Calibration Period = 0.
 Classic/Buttons/A = `Classic A`
@@ -72,16 +72,17 @@ Classic/D-Pad/Up = `Classic Up`
 Classic/D-Pad/Down = `Classic Down`
 Classic/D-Pad/Left = `Classic Left`
 Classic/D-Pad/Right = `Classic Right`
-Rumble/Motor = `Motor`
 Options/Battery = 100.
 D-Pad/Right = `Pad E`
-IMUGyroscope/Dead Zone = 0.
 Nunchuk/IMUAccelerometer/Up = `DSUClient/1/Joycond Cemuhook:Accel Up`
 Nunchuk/IMUAccelerometer/Down = `DSUClient/1/Joycond Cemuhook:Accel Down`
 Nunchuk/IMUAccelerometer/Left = `DSUClient/1/Joycond Cemuhook:Accel Left`
 Nunchuk/IMUAccelerometer/Right = `DSUClient/1/Joycond Cemuhook:Accel Right`
 Nunchuk/IMUAccelerometer/Forward = `DSUClient/1/Joycond Cemuhook:Accel Forward`
 Nunchuk/IMUAccelerometer/Backward = `DSUClient/1/Joycond Cemuhook:Accel Backward`
+IMUGyroscope/Dead Zone = 0.
+Rumble/Motor/Range = 50.
+Rumble/Motor = `Motor`
 [Wiimote2]
 Device = XInput2/0/Virtual core pointer
 Source = 0
